--- a/todo-api/build.gradle
+++ b/todo-api/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     compile 'org.jooq:jooq:3.11.9'
     compile "org.springframework.boot:spring-boot-starter-actuator"
     runtime 'mysql:mysql-connector-java:8.0.11'
-    compileOnly 'org.projectlombok:lombok:1.18.4'
+    implementation 'org.projectlombok:lombok:1.18.4'
     compile group: 'org.modelmapper', name: 'modelmapper', version: '0.7.5'
     compile group: 'org.modelmapper.extensions', name: 'modelmapper-jooq', version: '2.3.2'
     testCompile 'junit:junit:4.11'
