--- a/todo-api/build.gradle
+++ b/todo-api/build.gradle
@@ -25,9 +25,15 @@ plugins {
 }
 
 apply plugin: 'java'
+apply plugin: 'war'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin : 'org.flywaydb.flyway'
+
+war {
+    enabled = true
+    archiveName = 'todo-api.war'
+}
 
 group = 'com.kazys'
 version = '0.0.1-SNAPSHOT'
@@ -83,5 +89,6 @@ def xml = new groovy.xml.MarkupBuilder(writer)
         }
     }
 }
+
 
 GenerationTool.generate(writer.toString())
