--- a/todo-api/src/main/resources/application.properties
+++ b/todo-api/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8080
 
 
-spring.datasource.url= jdbc:mysql://localhost:3306/todos?autoReconnect=true&useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/todos
 spring.datasource.username=root
 spring.datasource.password=root
+        
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
