--- a/todo-api/Dockerfile
+++ b/todo-api/Dockerfile
@@ -1,4 +1,3 @@
 FROM tomcat:8-jre8
-ADD build/libs/todo-api.war /usr/local/tomcat/webapps/
-
 EXPOSE 8080
+ADD todo-api.war /usr/local/tomcat/webapps/
